# RasPe

./: .coverage  .gitignore  README.md  pyproject.toml
.windsurf/rules/: tests.md
src/brascraper/: __init__.py  base_scraper.py  html_scraper.py
src/brascraper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/brascraper/scrapers/: ipea.py  senado.py
src/buscraper/: __init__.py  base_scraper.py  scraper_manager.py  utils.py
src/buscraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/buscraper/scrapers/: comunicaCNJ.py  presidencia.py  senado.py
src/legiscraper/: __init__.py  base_scraper.py  comunicaCNJ_scraper.py  scraper_manager.py  scraper_presidencia.py  scraper_stf.py  utils.py
src/legiscraper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/legiscraper/scrapers/: DOU.py  Folha.py  comunicaCNJ.py  presidencia.py  scraper_template.py
src/raspe/: __init__.py  base_scraper.py
src/raspe/scrapers/: camara.py  cfm.py  presidencia.py
src/scraperBR/: __init__.py  base_scraper.py  scraper_manager.py  utils.py
src/scraperBR.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/scraperBR/scrapers/: __init__.py
testes/: PRESIDENCIA_00004.html  dev_presidencia.ipynb  scrape_teste.csv  teste.ipynb  teste_cnj.ipynb  teste_presidencia.ipynb
tests/: README.md  conftest.py  rastrear_busca.ipynb  test_base_scraper.py  test_cnj.py  test_ipea.ipynb  test_presidencia.py  test_scraper_manager.py  test_utils.py  teste_dou.ipynb  teste_presidenciaLista.ipynb  tipos.xlsx
