[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "buscraper"
version = "0.1.0"
description = "A package for scraping legal data from various sources"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Bruno da C. de Oliveira", email = "bruno.dcdo@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "polars>=0.20.0",
    "requests>=2.28.0",
    "tenacity>=8.2.3",
    "beautifulsoup4>=4.12.2",
    "tqdm>=4.66.1",
]

[project.urls]
Homepage = "https://github.com/bdcdo/buscraper"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "-v -s --cov=src/buscraper --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
